--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="author" content="Aster Irving">
         <meta name="description" content="Aster's shenanigans">
-        <meta name="viewport" content="width=device-width, initial-sclae=1.0">
-        <link rel="stylesheet" href="style.css" type="text.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css" type="text/css">
         <script src="toggletheme.js" type="text/javascript"></script>
         <script src="choose.js" type="text/javascript"></script>
     </head>
@@ -17,6 +17,11 @@
                 <p>I'm a bit of a minor myself</p>
                 <p>And uh yeah have fun on this site</p>
                 <img> <!--current pfp-->
+            </div>
+            <div class="warning">
+                <h3>THIS SITE IS IN NALPHA.</h3>
+                <hr>
+                <p>IT WON'T BE WORKING AS INTENDED AS CODE IS MISSING.</p>
             </div>
             <div class="sidedivb">
                 <img> <!--banner gif?-->
@@ -39,7 +44,7 @@
                 <h1>heyo</h1>
                 <p>my name's aster (or iris?? im still thinking about it), and this is a little website i made!</p>
             </div>
-            <div id="display" class="crt scanline"></div>
+            <div id="display" class="crt"></div>
             <button onclick="oldweb()">Older website</button>
         </div>
     </body>
