--- a/index.html
+++ b/index.html
@@ -11,41 +11,55 @@
         <script src="choose.js" type="text/javascript"></script>
     </head>
     <body>
-        <div class="sidediv">
-            <div class="sidediva">
-                <h1>Heyo I'm Aster</h1>
-                <p>I'm a bit of a minor myself</p>
-                <p>And uh yeah have fun on this site</p>
-                <img> <!--current pfp-->
+        <div class="layout">
+            <div class="sidediv">
+                <div class="sidediva">
+                    <h1>Heyo I'm Aster</h1>
+                    <p>I'm a bit of a minor myself</p>
+                    <p>And uh yeah have fun on this site</p>
+                    <img> <!--current pfp-->
+                </div>
+                <div class="warning">
+                    <h3>THIS SITE IS IN NALPHA.</h3>
+                    <hr>
+                    <p>IT WON'T BE WORKING AS INTENDED AS CODE IS MISSING.</p>
+                </div>
+                <div class="sidedivb">
+                    <img> <!--banner gif?-->
+                </div>
+                <div class="sidediva">
+                    <p>nah im sending yo ahh back</p>
+                    <ul>
+                        <li><a href="https://bionikaster.vercel.app/">vercel</a></li>
+                        <li><a href="https://bionik-aster.github.io/">github</a></li>
+                        <li><a href="https://bionik-aster.github.io/the-websit/">old github</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="warning">
-                <h3>THIS SITE IS IN NALPHA.</h3>
-                <hr>
-                <p>IT WON'T BE WORKING AS INTENDED AS CODE IS MISSING.</p>
+            <div class="content">
+                <div class="contenta">
+                    <p id="randomsplash" class="splash"></p>
+                    <script src="splash.js"></script>
+                </div>
+                <div class="contentb">
+                    <h1>introduction</h1>
+                    <br>
+                    <p>
+                        my name's aster (or iris?? im still thinking about it),
+                        and this is a little website i made!
+                    </p>
+                    <p>
+                        i wouldnt say im good at coding or anything since most of my knowledge is temporary and
+                        frankly taken from the internet
+                    </p>
+                    <p>
+                        nonetheless im taking CS for my GCSE and so far i havent regretted my choice unlike
+                        geography
+                    </p>
+                </div>
+                <div id="display" class="crt"></div>
+                <button onclick="oldweb()">Older website</button>
             </div>
-            <div class="sidedivb">
-                <img> <!--banner gif?-->
-            </div>
-            <div class="sidediva">
-                <p>nah im sending yo ahh back</p>
-                <ul>
-                    <li><a href="https://bionikaster.vercel.app/">vercel</a></li>
-                    <li><a href="https://bionik-aster.github.io/">github</a></li>
-                    <li><a href="https://bionik-aster.github.io/the-websit/">old github</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="content">
-            <div class="contenta">
-                <p id="randomsplash" class="splash"></p>
-                <script src="splash.js"></script>
-            </div>
-            <div class="contentb">
-                <h1>heyo</h1>
-                <p>my name's aster (or iris?? im still thinking about it), and this is a little website i made!</p>
-            </div>
-            <div id="display" class="crt"></div>
-            <button onclick="oldweb()">Older website</button>
         </div>
     </body>
 </html>
