--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Aster's shenanigans">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css" type="text/css">
-        <script src="choose.js" type="text/javascript"></script>
+        <script src="choose.js" type="module"></script>
         <script src="https://unpkg.com/bowser@2.7.0/es5.js"></script>
         <script>
             addEventListener('DOMContentLoaded', () => {
@@ -74,7 +74,7 @@
                     </p>
                 </div>
                 <div id="display" class="crt"></div>
-                <button onclick="oldweb()">Older website</button>
+                <button id="oldwebbtn">Older website</button>
             </div>
         </div>
     </body>
