--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     </p>
                 </div>
                 <div class="sidediva">
-                    <h1>Heyo I'm Aster</h1>
-                    <p>I'm a bit of a minor myself</p>
-                    <p>And uh yeah have fun on this site</p>
+                    <h1>AsterOS v14</h1>
+                    <p class="fineprint">Aster Irving &copy; MMXXVI Not A Corporation</p>
+                    <p class="fineprint">All Lights Reserved (CC BY-NC-SA 4.0 Int)</p>
                     <img> <!--current pfp-->
                 </div>
                 <br>
@@ -73,7 +73,7 @@
                         geography
                     </p>
                 </div>
-                <div id="display" class="crt"></div>
+                <div id="display" class="crt" height="50%" width="60%"></div>
                 <button id="oldwebbtn">Older website</button>
             </div>
         </div>
