--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                         geography
                     </p>
                 </div>
-                <div id="display" class="crt" height="50%" width="60%"></div>
+                <iframe id="display" class="crt"></iframe>
+                <p id="loading">Loading...</p>
                 <button id="oldwebbtn">Older website</button>
             </div>
         </div>
