--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1>AsterOS v14</h1>
                     <p class="fineprint">Aster Irving &copy; MMXXVI Not A Corporation</p>
                     <p class="fineprint">All Lights Reserved (CC BY-NC-SA 4.0 Int)</p>
-                    <img> <!--current pfp-->
+                    <img id="imagesplash"> <!--loading pfp from images-->
                 </div>
                 <br>
                 <div class="warning">
