--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css" type="text/css">
         <script src="choose.js" type="module"></script>
+        <script src="currentver.js" type="text/javascript" defer></script>
+        <script src="imagesplash.js" type="text/javascript"></script>
         <script src="https://unpkg.com/bowser@2.7.0/es5.js"></script>
         <script>
             addEventListener('DOMContentLoaded', () => {
@@ -41,7 +43,9 @@
                     <p>IT WON'T BE WORKING AS INTENDED AS CODE IS MISSING.</p>
                 </div>
                 <div class="sidedivb">
-                    <img> <!--banner gif?-->
+                    <p class="sdbcontent">
+                        AsterOS is currently running on <span id="currentver"></span>.
+                    </p>
                 </div>
                 <div class="sidediva">
                     <p>nah im sending yo ahh back</p>
