--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                 </div>
                 <br>
                 <div class="warning">
-                    <h3>THIS SITE IS IN NALPHA.</h3>
-                    <hr>
-                    <p>IT WON'T BE WORKING AS INTENDED AS CODE IS MISSING.</p>
+                    <p>this site is in v.Alpha 1.0</p>
+                    <p>expect bugs and shitty code</p>
                 </div>
                 <div class="sidedivb">
                     <p class="sdbcontent">
