--- a/mainframe/index.html
+++ b/mainframe/index.html
@@ -11,8 +11,9 @@
     </head>
     <body class="screen">
         <div class="screen-title">
-            <p>AsterLP StarShell [Version 0.0.1]</p>
+            <p>AsterLP StarShell [Version 1.1.0]</p>
             <p>(c) Aster Irving. All Lights Reserved.</p>
+            <p>CC BY-NC-SA 4.0 Int</p>
         </div>
         <div class="prompt">
             <form id="cmdform">
