--- a/mainframe/index.html
+++ b/mainframe/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="initial-scale=1.0, width=device-width">
         <meta name="author" content="Aster Irving">
         <meta name="description" content="Command Prompt.">
-        <link rel="stylesheet" href="mainframe.css" type="text/css">
-        <script src="mainframe.js" defer></script>
+        <link rel="stylesheet" href="/mainframe.css" type="text/css">
+        <script src="/mainframe.js" defer></script>
     </head>
     <body class="screen">
         <div class="screen-title">
