--- a/mainframe/index.html
+++ b/mainframe/index.html
@@ -17,8 +17,8 @@
         </div>
         <div class="prompt">
             <form id="cmdform">
-                <label for="command">C:AsterLP\Link></label>
-                <input type="text" name="command" id="commandInput">
+                <label for="commandInput">C:AsterLP\Link></label>
+                <textarea id="commandInput" rows="1" class="cmd-input"></textarea>
             </form>
             <div id="output"></div>
         </div>
