--- a/mainframe/index.html
+++ b/mainframe/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="initial-scale=1.0, width=device-width">
         <meta name="author" content="Aster Irving">
         <meta name="description" content="Command Prompt.">
-        <link rel="stylesheet" href="/mainframe.css" type="text/css">
-        <script src="/mainframe.js" defer></script>
+        <link rel="stylesheet" href="https://asterirving.vercel.app/mainframe.css" type="text/css">
+        <script src="https://asterirving.vercel.app/mainframe.js" defer></script>
     </head>
     <body class="screen">
         <div class="screen-title">
-            <p>AsterLP StarShell [Version 1.2.0]</p>
+            <p>AsterLP StarShell [Version 1.3.0]</p>
             <p>(c) Aster Irving. All Lights Reserved.</p>
             <p>CC BY-NC-SA 4.0 Int</p>
         </div>
