--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <br>
                 <div class="warning">
-                    <p>this site is in v.Alpha 1.2.4</p>
+                    <p>this site is in v.Alpha 1.2.5</p>
                     <p>expect bugs and shitty code</p>
                 </div>
                 <div class="sidedivb">
@@ -49,7 +49,7 @@
                 <div class="sidediva">
                     <p>nah im sending yo ahh back</p>
                     <ul>
-                        <li><a href="https://bionikaster.vercel.app/">vercel</a></li>
+                        <li><a href="https://asterroot.vercel.app/">vercel</a></li>
                         <li><a href="https://bionik-aster.github.io/">github</a></li>
                         <li><a href="https://bionik-aster.github.io/the-websit/">old github</a></li>
                     </ul>
@@ -64,7 +64,7 @@
                     <h1>introduction</h1>
                     <br>
                     <p>
-                        my name's aster (or iris?? im still thinking about it),
+                        my name's aster (or iris idm),
                         and this is a little website i made!
                     </p>
                     <p>
@@ -73,7 +73,11 @@
                     </p>
                     <p>
                         nonetheless im taking CS for my GCSE and so far i havent regretted my choice unlike
-                        geography
+                        geography and RE
+                    </p>
+                    <br>
+                    <p>
+                        check out /mainframe/ its pretty cool as well heh
                     </p>
                 </div>
                 <iframe id="display" class="crt"></iframe>
