--- a/mainframe/index.html
+++ b/mainframe/index.html
@@ -11,7 +11,7 @@
     </head>
     <body class="screen">
         <div class="screen-title">
-            <p>AsterLP StarShell [Version 1.3.0]</p>
+            <p>AsterLP StarShell [Version 1.3.1]</p>
             <p>(c) Aster Irving. All Lights Reserved.</p>
             <p>CC BY-NC-SA 4.0 Int</p>
         </div>
@@ -21,6 +21,9 @@
                 <textarea id="commandInput" rows="1" class="cmd-input"></textarea>
             </form>
             <div id="output"></div>
+        </div>
+        <div>
+            <a href="https://asterirving.vercel.app/">[Home]</a> <a href="https://asterirving.vercel.app/mainframe/">[Refresh]</a>
         </div>
     </body>
 </html>
