--- a/mainframe/index.html
+++ b/mainframe/index.html
@@ -16,8 +16,8 @@
             <p>CC BY-NC-SA 4.0 Int</p>
         </div>
         <div class="prompt">
-            <form id="cmdform">
-                <label for="commandInput">C:AsterLP\Link></label>
+            <form id="cmdform" class="cmd-form">
+                <span class="cmd-label">C:AsterLP\Link></span>
                 <textarea id="commandInput" rows="1" class="cmd-input"></textarea>
             </form>
             <div id="output"></div>
